# subtitles-editor

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  Info.plist.in  LICENSE  README.md  TODO.md  config.ini.template  prototype.html
.github/workflows/: build-deps.yml  release.yml
doc/design/: 1.pen  2.pen  3.pen  4.pen  maas-kimi2.5.pen  opencode-kimi2.6.pen  subtitles-editor-v1.pen
docs/: video_preview_optimization_plan.md
docs/superpowers/plans/: 2026-04-23-subtitle-editor-ui-refactor.md  2026-04-24-asr-implementation.md  2026-04-26-video-preview-implementation.md  2026-04-28-timeline-zoom-scroll.md  2026-05-09-drag-seek-preview.md  2026-05-13-subtitle-import-video-context-menu-plan.md  2026-05-14-timeline-clip-drag.md  2026-05-15-configuration-window.md  2026-05-16-setup-test-infrastructure.md  2026-05-19-asr-progress-implementation.md  2026-05-21-opt-seek-implementation.md  2026-05-23-dynamic-subtitle-bg.md  2026-05-25-project-file-feature.md  2026-05-30-installers-organization.md  2026-06-02-macos-cicd-plan.md  2026-06-15-subtitle-trim-to-playhead.md
docs/superpowers/specs/: 2026-04-23-subtitle-editor-ui-architecture-design.md  2026-04-24-asr-design.md  2026-04-26-video-preview-design.md  2026-04-28-timeline-zoom-scroll-design.md  2026-05-09-drag-seek-preview-design.md  2026-05-13-subtitle-import-video-context-menu-design.md  2026-05-14-timeline-clip-drag-design.md  2026-05-15-configuration-window-design.md  2026-05-18-theme-optimization-design.md  2026-05-19-asr-progress-design.md  2026-05-23-dynamic-subtitle-bg-design.md  2026-05-25-project-file-feature-design.md  2026-05-26-video-export-design.md  2026-05-30-installers-organization-design.md  2026-06-02-macos-cicd-design.md  2026-06-15-subtitle-trim-to-playhead-design.md
include/: AppMessageBox.h  AppWindow.h  AsrConfigDialog.h  AsrProgressDialog.h  AsrServiceBase.h  AudioTranscoder.h  BaseDialog.h  ConfigDialog.h  ConfigManager.h  CosUploader.h  CursorManager.h  ExportDialog.h  FFmpegDecoder.h  HardwareVideoRenderer.h  IVideoRenderer.h  KeyframePrefetcher.h  MediaPlayer.h  OssUploader.h  PaletteSelectors.h  ProjectManager.h  QtAudioOutput.h  SeekDecoder.h  SentryManager.h  SoftwareVideoRenderer.h  SpeakerManagerDialog.h  SubtitleExporter.h  SubtitleItem.h  SubtitleListDelegate.h  SubtitleListModel.h  SubtitleListPanel.h  SubtitleProject.h  SubtitleRenderer.h  SubtitleTrack.h  TencentAsrService.h  ThemeManager.h  TimelinePanel.h  ToolTipEventFilter.h  TranslationManager.h  VideoExportDialog.h  VideoExporter.h  (+4 more)
resources/: AppIcon.icns  resources.qrc
resources/presets/: system_presets.json
resources/themes/: dark.qss  light.qss  midnight.qss  oled.qss  theme.qss
scripts/: build-deps-macos.sh  build-deps-windows.ps1  merge-universal-macos.sh  package-macos.sh
src/: AppMessageBox.cpp  AppWindow.cpp  AsrConfigDialog.cpp  AsrProgressDialog.cpp  AsrServiceBase.cpp  AudioTranscoder.cpp  BaseDialog.cpp  ConfigDialog.cpp  ConfigManager.cpp  CosUploader.cpp  CursorManager.cpp  ExportDialog.cpp  FFmpegDecoder.cpp  HardwareVideoRenderer.mm  KeyframePrefetcher.cpp  MediaPlayer.cpp  OssUploader.cpp  PaletteSelectors.cpp  ProjectManager.cpp  QtAudioOutput.cpp  SeekDecoder.cpp  SentryManager.cpp  SoftwareVideoRenderer.cpp  SpeakerManagerDialog.cpp  SubtitleExporter.cpp  SubtitleListDelegate.cpp  SubtitleListModel.cpp  SubtitleListPanel.cpp  SubtitleProject.cpp  SubtitleRenderer.cpp  SubtitleTrack.cpp  TencentAsrService.cpp  ThemeManager.cpp  TimelinePanel.cpp  ToolTipEventFilter.cpp  TranslationManager.cpp  VideoExportDialog.cpp  VideoExporter.cpp  VideoPreviewPanel.cpp  VideoPropertyDialog.cpp  (+2 more)
tests/: CMakeLists.txt  TestConfigManager.cpp  TestThemeManager.cpp
translations/: en_US.qm  en_US.ts  zh_CN.qm  zh_CN.ts
